[package]
name = "cider-press"
version = "0.1.1"
edition = "2021"
description = "High-precision ICC color management (LittleCMS) bridge for WebAssembly."
license = "MIT"
repository = "https://github.com/oatear/cider-press"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
lcms2 = "6"
bytemuck = "1"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
image = "0.25"
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = ["console_error_panic_hook"]

[profile.release]
lto = true
opt-level = "s"       # Optimize for WASM binary size
strip = true          # Strip debug symbols
codegen-units = 1     # Better optimization at cost of compile time
